[gd_scene load_steps=4 format=3 uid="uid://cuwvdxyyh1unn"]

[ext_resource type="Script" path="res://interface/PlayScreen.gd" id="1"]
[ext_resource type="PackedScene" path="res://interface/ScriptDisplay.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://blpvbio2e5xwf" path="res://icons/edit.svg" id="3"]

[node name="Background" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0.0627451, 0.12549, 1)
script = ExtResource("1")

[node name="Layout" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -300

[node name="VBC" type="VBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spoolbook_Label" type="Label" parent="Layout/VBC"]
layout_mode = 2
text = "Spoolbook"

[node name="Spoolbook" type="Tree" parent="Layout/VBC"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true
select_mode = 1

[node name="Historybook_Label" type="Label" parent="Layout/VBC"]
layout_mode = 2
text = "Historybook"

[node name="Historybook" type="ItemList" parent="Layout/VBC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="L2" type="HSplitContainer" parent="Layout"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 80

[node name="ColorRect" type="ColorRect" parent="Layout/L2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0.14902, 1)

[node name="VBC" type="VBoxContainer" parent="Layout/L2/ColorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 1

[node name="TitleBar" type="HBoxContainer" parent="Layout/L2/ColorRect/VBC"]
layout_mode = 2

[node name="Play_Button" type="Button" parent="Layout/L2/ColorRect/VBC/TitleBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Start"

[node name="Edit_Button" type="Button" parent="Layout/L2/ColorRect/VBC/TitleBar"]
visible = false
layout_mode = 2
tooltip_text = "Edit encounter."
icon = ExtResource("3")

[node name="EncounterTitle" type="Label" parent="Layout/L2/ColorRect/VBC/TitleBar"]
layout_mode = 2

[node name="MainText" type="RichTextLabel" parent="Layout/L2/ColorRect/VBC"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true

[node name="ScriptReportButtonsHBC" type="HBoxContainer" parent="Layout/L2/ColorRect/VBC"]
visible = false
layout_mode = 2
alignment = 1

[node name="EncounterSelectionReportButton" type="Button" parent="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC"]
layout_mode = 2
text = "Encounter Selection Report"

[node name="OptionScriptReportButton" type="Button" parent="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC"]
layout_mode = 2
text = "Option Script Reports"

[node name="OptionsList" type="ItemList" parent="Layout/L2/ColorRect/VBC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC" type="VBoxContainer" parent="Layout/L2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Castbook_Label" type="Label" parent="Layout/L2/VBC"]
layout_mode = 2
text = "Castbook"

[node name="Castbook" type="Tree" parent="Layout/L2/VBC"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resulting_Reaction" type="Label" parent="Layout/L2/VBC"]
visible = false
layout_mode = 2
text = "Results:"
clip_text = true

[node name="Resulting_Encounter" type="Label" parent="Layout/L2/VBC"]
visible = false
layout_mode = 2

[node name="Reaction_Inclinations" parent="Layout/L2/VBC" instance=ExtResource("2")]
visible = false
layout_mode = 2
columns = 2
select_mode = 1

[node name="EncounterScriptReportWindow" type="AcceptDialog" parent="."]
title = "Encounter Script Report"
size = Vector2i(700, 650)

[node name="VBC" type="VBoxContainer" parent="EncounterScriptReportWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0

[node name="Background" type="ColorRect" parent="EncounterScriptReportWindow/VBC"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConsequenceReport" type="RichTextLabel" parent="EncounterScriptReportWindow/VBC/Background"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true

[node name="ScriptDisplay" parent="EncounterScriptReportWindow/VBC" instance=ExtResource("2")]
layout_mode = 2
columns = 2
select_mode = 1

[node name="OptionScriptReportWindow" type="AcceptDialog" parent="."]
title = "Option Script Report"
size = Vector2i(700, 650)

[node name="ScriptDisplay" parent="OptionScriptReportWindow" instance=ExtResource("2")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 8.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 476.0
columns = 2
select_mode = 1

[connection signal="item_activated" from="Layout/VBC/Historybook" to="." method="_on_Historybook_item_activated"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/TitleBar/Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/TitleBar/Edit_Button" to="." method="_on_Edit_Button_pressed"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC/EncounterSelectionReportButton" to="." method="_on_EncounterSelectionReportButton_pressed"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC/OptionScriptReportButton" to="." method="_on_OptionScriptReportButton_pressed"]
[connection signal="item_activated" from="Layout/L2/ColorRect/VBC/OptionsList" to="." method="_on_OptionsList_item_activated"]
[connection signal="item_selected" from="Layout/L2/ColorRect/VBC/OptionsList" to="." method="_on_OptionsList_item_selected"]
